--- a/appstate.json
+++ b/appstate.json
@@ -1,30 +1,30 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100012104108166%22%3A%22N1IgLvTg%22%7D",
+        "value": "%7B%22100009115686385%22%3A%22zlj0R6va%22%2C%22100000563460090%22%3A%22FomyXVAP%22%2C%22100014739400553%22%3A%22KdAHnovy%22%2C%22100000592689993%22%3A%22ObGdk1BJ%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-08-16T04:23:04.618Z",
-        "lastAccessed": "2025-08-16T04:23:04.619Z"
+        "creation": "2025-08-16T04:27:36.432Z",
+        "lastAccessed": "2025-08-16T04:27:36.433Z"
     },
     {
         "key": "datr",
-        "value": "FnCcaDZxTbfxlat6lGAvtgCi",
+        "value": "yE0raGpxoJVlNis29PyHIq5o",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-16T04:23:04.619Z",
-        "lastAccessed": "2025-08-16T04:23:04.619Z"
+        "creation": "2025-08-16T04:27:36.433Z",
+        "lastAccessed": "2025-08-16T04:27:36.433Z"
     },
     {
         "key": "sb",
-        "value": "FnCcaJLTpv9yAIfaX3TGBmro",
+        "value": "yE0raLObA3D1u8LnZf3P18zp",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-16T04:23:04.619Z",
-        "lastAccessed": "2025-08-16T04:23:04.619Z"
+        "creation": "2025-08-16T04:27:36.433Z",
+        "lastAccessed": "2025-08-16T04:27:36.433Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-16T04:23:04.619Z",
-        "lastAccessed": "2025-08-16T04:23:04.619Z"
+        "creation": "2025-08-16T04:27:36.433Z",
+        "lastAccessed": "2025-08-16T04:27:36.433Z"
     },
     {
         "key": "ps_n",
@@ -41,88 +41,79 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-16T04:23:04.619Z",
-        "lastAccessed": "2025-08-16T04:23:04.619Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_GB",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-16T04:23:04.619Z",
-        "lastAccessed": "2025-08-16T04:23:04.619Z"
-    },
-    {
-        "key": "vpd",
-        "value": "v1%3B625x314x3.444999933242798",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-16T04:23:04.619Z",
-        "lastAccessed": "2025-08-16T04:23:04.619Z"
-    },
-    {
-        "key": "oo",
-        "value": "v1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-16T04:23:04.619Z",
-        "lastAccessed": "2025-08-16T04:23:04.619Z"
+        "creation": "2025-08-16T04:27:36.433Z",
+        "lastAccessed": "2025-08-16T04:27:36.433Z"
     },
     {
         "key": "pas",
-        "value": "61579642070829%3Avf93aIMQTx%2C100012104108166%3AIGTZz290Ks",
+        "value": "100000563460090%3AMU4MifhdTf%2C100009115686385%3AvVIISgXD3E%2C100014739400553%3AnVUK5lTxUd%2C100000592689993%3AFiXSRiuvUp",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-16T04:23:04.619Z",
-        "lastAccessed": "2025-08-16T04:23:04.619Z"
+        "creation": "2025-08-16T04:27:36.433Z",
+        "lastAccessed": "2025-08-16T04:27:36.433Z"
     },
     {
-        "key": "c_user",
-        "value": "100012104108166",
+        "key": "vpd",
+        "value": "v1%3B694x393x2.225780963897705",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-16T04:23:04.619Z",
-        "lastAccessed": "2025-08-16T04:23:04.619Z"
+        "creation": "2025-08-16T04:27:36.433Z",
+        "lastAccessed": "2025-08-16T04:27:36.433Z"
     },
     {
-        "key": "xs",
-        "value": "20%3ANh47s_vig3S8Ug%3A2%3A1755317014%3A-1%3A-1",
+        "key": "dpr",
+        "value": "2.4515938758850098",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-16T04:23:04.619Z",
-        "lastAccessed": "2025-08-16T04:23:04.619Z"
-    },
-    {
-        "key": "fr",
-        "value": "0PYjDC5JzuzO5Yhxc.AWdxPifeqB3qDG0DW1BCsELGeIZ6VefH9lApgoyL69DwFF1xk6E.BonIIk..AAA.0.0.BooAUG.AWd1YyiFdEcNnl18a4vykxv9Zdc",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-16T04:23:04.619Z",
-        "lastAccessed": "2025-08-16T04:23:04.619Z"
+        "creation": "2025-08-16T04:27:36.433Z",
+        "lastAccessed": "2025-08-16T04:27:36.433Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2894%3Btimestamp%3A1755317511",
+        "value": "v2%3Bclient_version%3A2889%3Btimestamp%3A1754830441",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-16T04:23:04.619Z",
-        "lastAccessed": "2025-08-16T04:23:04.619Z"
+        "creation": "2025-08-16T04:27:36.433Z",
+        "lastAccessed": "2025-08-16T04:27:36.433Z"
     },
     {
-        "key": "fbl_st",
-        "value": "101529505%3BT%3A29255291",
+        "key": "wd",
+        "value": "1099x1941",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-16T04:23:04.619Z",
-        "lastAccessed": "2025-08-16T04:23:04.619Z"
+        "creation": "2025-08-16T04:27:36.433Z",
+        "lastAccessed": "2025-08-16T04:27:36.433Z"
+    },
+    {
+        "key": "c_user",
+        "value": "100000563460090",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-16T04:27:36.433Z",
+        "lastAccessed": "2025-08-16T04:27:36.433Z"
+    },
+    {
+        "key": "xs",
+        "value": "38%3A_WIppGLFafLkhA%3A2%3A1755293105%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-16T04:27:36.433Z",
+        "lastAccessed": "2025-08-16T04:27:36.433Z"
+    },
+    {
+        "key": "fr",
+        "value": "1kSsRGCKrFKkzQb7b.AWeR7bKDCB6uWwiHYRbrcgxHMx9fKq0-XhhT99TrKM2-_gbjmrY.BolEFT..AAA.0.0.BooAiu.AWcn-ePn2YXDg1wY9JJgtJmPdtk",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-16T04:27:36.433Z",
+        "lastAccessed": "2025-08-16T04:27:36.433Z"
     }
-        ]
+]
