--- a/config.json
+++ b/config.json
@@ -13,16 +13,16 @@
     "eventDisabled": [
         "join.js"
     ],
-    "EMAIL": "kicigo3882@cansku.com",
-    "PASSWORD": "RJ07ZAINA",
+    "EMAIL": "Laila780@gmail.com",
+    "PASSWORD": "RJ0778",
     "OTPKEY": "",
-    "BOTNAME": " ✦🌎𝐏𝐑𝐈𝐍𝐂𝐄🌎🦋🎀:-)──➣✦🍒",
-    "PREFIX": ".",
+    "BOTNAME": " ✦🌎™⏤͟͟͞͞✺A̤̽lɵ̤̈ɳ͡ɜ P͎̈ʀ͡ɪ̤ɪy̽͢ʌ X ⃝d 🩵 ــ𓆩𓆪 🩷 🩵🪽𓁋🪼 🪽🌎🦋🎀:-)──➣✦🍒",
+    "PREFIX": "#",
     "ADMINBOT": [
-        "61560621821421"
+        "61571623693328"
     ],
     "NDH": [
-        "61560621821421"
+        "61571623693328"
     ],
     "DATABASE": {
         "sqlite": {
